--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
 							<td> </td>
 						</tr>
 						<tr>
-							<td>Category</td>
+							<td>Batch</td>
 							<td> </td>						
 						<tr>
-							<td>Batch</td>
+							<td>Category</td>
 							<td> </td>
 						</tr>
 					</table>
@@ -96,7 +96,7 @@
                 </table>
                 
                 <table class="table text-center" id="payment">
-                    <thead class="primary"><tr><th>Fee Particulur </th><th>Term</th><th>Amount of Due</th><th>Paid</th><th>Balance Paid</th></tr></thead>
+                    <thead class="primary"><tr><th>Fee Particular </th><th>Term</th><th>Amount of Due</th><th>Paid</th><th>Balance Paid</th></tr></thead>
 					<tr>
 						<td> Tution </td>
 						<td> Term</td>
@@ -127,7 +127,7 @@
 					</tr>					
 					<tr>
 						<td>  </td>
-						<td> Total:</td>
+						<td class='font-weight-bold'> Total:</td>
 						<td> 0.00</td>
 						<td> 0.00</td>
 						<td> 0.00</td>
